--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.product{
+  background-color: #282c34;
+  border: 2px solid wheat;
+  border-radius: 15px;
+  margin: 20px;
+  color: white;
+}
